Version 2.2 - NO NAME SET
----------------------------------
Core - General
- Fix the template compiler so that content blocks can be placed within sub templates and detected with the {include} tag.
- Fix minor problem with checksum verification.

CMSContentmanager v1.0.3
- Minor template changes in edit content wrt. locking

DesignManager v1.1.1
- Minor template changes in edit content wrt. locking


Version 2.1 - Bahamas
----------------------------------
Core - General
- Minor performance tweaks to sample htaccess.txt
- Minor fix to the ProcessTemplateFromDatabase module API method.
- Improvements and re-factor the way headers are sent wrt caching
- Add a new method to the ModuleOperations class to allow a module to be within a namespace.
- Enhances the Group class.
- Enhancements and fixes to the cms_url class.
- Modified the $mod->smarty reference to be smarter... it is now deprecated.
- Fixes issue with https requests (#10697)
- Modifies The CmsLayoutTemplate class and CmsLayoutTemplateQuery to allow filtering on listable or non listable
  or setting a template as listable (default) or non listable
- Fixes a problem with styling of the login form if tasks must be run AND a module needs upgrading.
- Fixes to the cloning of templates in CmsLayoutTemplate
- Fixes problem with SetAllHierarchyPositions that cleared the entire cache instead of only the necessary part of it.
- Adds the unloadCancel handler to the lockManager jquery plugin.
- Moves version.php and include.php inside the lib directory so that they are easier to protect from unwanted direct access.
- Fixes to page alias tests when manually entering a page alias.
- Missing language strings are no longer output to Admin log, but to the debug log.
- Requests for modules that are not installed/enabled, or for invalid actions will now result in 404 errors.
- Fixed problem where restricted content editors could implicitly change the page alias.