@@ -369,8 +369,8 @@ class cms_filecache_driver extends cms_cache_driver
     {
         if( !$group ) $group = $this->_group;
 
-        $mask = $dir.'/dcache_*_*.cg';
-        if( $group ) $mask = $dir.'/dcache_'.md5($group).'_*.cg';
+        $mask = $dir.'/cache_*_*.cg';
+        if( $group ) $mask = $dir.'/cache_'.md5($group).'_*.cg';
 
         $files = glob($mask);
         if( !is_array($files) ) return 0;
