@@ -3,6 +3,9 @@ Version 2.2 - NO NAME SET
 Core - General
 - Fix the template compiler so that content blocks can be placed within sub templates and detected with the {include} tag.
 - Fix minor problem with checksum verification.
+- Fix to the cms_cache_handler class
+- Minor fix to SetAllPageHierarchies()
+- Correct location where session was started in frontend displays.
 
 CMSContentmanager v1.0.3
 - Minor template changes in edit content wrt. locking
